--- a/_pc.scss
+++ b/_pc.scss
@@ -11,16 +11,15 @@
 @media screen and (min-width: 961px) {
 .layoutInner {
   margin: 0 auto;
-  max-width: 1040px;
-  width: 70%;
+  max-width: 1060px;
 }
 }
 
 /* header */
 .headerLogo {
   float: left;
-  padding-top: 15px;
-  font-size: 24px;
+  padding: 30px 0;
+  font-size: 35px;
   color: #FFF;
   font-weight: 400;
   letter-spacing: 0.08em;
@@ -30,7 +29,8 @@
 
 .nav {
   float: right;
-  padding-top: 15px;
+  width: 570px;
+  padding-top: 40px;
   .menu {
     display: table;
     table-layout: auto;
@@ -38,15 +38,15 @@
       display: table-cell;
       vertical-align: top;
       text-align: right;
-      padding-left: 20px;
+      padding-left: 40px;
       .menuInner {
         font-size: 14px;
         color: #FFF;
         font-weight: 300;
       }
       .menuInner:hover {
-        border-bottom: 3px solid #7b6c63;
-        padding-bottom: 4px;
+        border-bottom: 5px solid #7b6c63;
+        padding-bottom: 10px;
       }
     }
   }
@@ -63,32 +63,38 @@
   background-size: 100% 150%;
   background-repeat: no-repeat;
   .visualInner {
-    height: 450px;
+    height: 675px;
     .visualText {
-      padding-top: 100px;
+      padding-top: 190px;
       color: #FFF;
+      .visualSubTitle {
+        font-size: 17px;
+      }
       .visualTitle {
-        margin: 5px 0 30px 0;
-        font-size: 40px;
-        font-weight: 400;
-        line-height: 1.2em;
-        letter-spacing: 0.08em;
-        .visualTitleColor {
-          color: #7b6c63;
+        margin: 30px 0 70px 0;
+        .visualTitleFont {
+          margin-bottom: 30px;
+          font-size: 47px;
+          font-weight: 400;
+          letter-spacing: 0.08em;
+          .visualTitleColor {
+            color: #7b6c63;
+          }
         }
       }
       .visualContact {
         display: block;
-        width: 200px;
-        padding: 15px 0px;
+        width: 265px;
+        padding: 24px 0px;
+        font-size: 12px;
         text-align: center;
-        background-color: rgba(200,200,200,0.2);
+        background-color: rgba(68, 57, 45, 0.2);
         .visualContactText {
           color: #FFF;
         }
       }
       .visualContact:hover {
-        background-color: rgba(200,200,200,0.4);
+        background-color: rgba(68,57,45,0.6);
       }
     }
   }
