--- a/reset.css
+++ b/reset.css
@@ -46,8 +46,8 @@ q:before, q:after {
   content:none;
 }
 
-body {
-  /* 追加 */
+* {
+  /*追加*/
   font-family: "Helvetica Neue", Helvetica, Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
@@ -93,7 +93,7 @@ table {
 hr {
   display:block;
   height:1px;
-  border:0;   
+  border:0;
   border-top:1px solid #cccccc;
   margin:1em 0;
   padding:0;
