--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 /*======= common ========*/
-#body {
-  position: relative;
+.body {
   font-size: 16px;
-  color: #000;
-  line-height: 1.2em;
+  line-height: 1;
 }
 
 #header {
-  background-color: #000;
+  background-color: #303030;
 }
 #header .headerInner {
-  height: 50px;
+  height: 95px;
   position: relative;
 }
 
@@ -19,7 +17,7 @@
 }
 
 #footer {
-  background-color: #000;
+  background-color: #1c1c1c;
 }
 #footer .footerInner {
   height: 30px;
@@ -375,16 +373,15 @@
 @media screen and (min-width: 768px) and (min-width: 961px) {
   .layoutInner {
     margin: 0 auto;
-    max-width: 1040px;
-    width: 70%;
+    max-width: 1060px;
   }
 }
 @media screen and (min-width: 768px) {
   /* header */
   .headerLogo {
     float: left;
-    padding-top: 15px;
-    font-size: 24px;
+    padding: 30px 0;
+    font-size: 35px;
     color: #FFF;
     font-weight: 400;
     letter-spacing: 0.08em;
@@ -393,7 +390,8 @@
   /* menu */
   .nav {
     float: right;
-    padding-top: 15px;
+    width: 570px;
+    padding-top: 40px;
   }
   .nav .menu {
     display: table;
@@ -403,7 +401,7 @@
     display: table-cell;
     vertical-align: top;
     text-align: right;
-    padding-left: 20px;
+    padding-left: 40px;
   }
   .nav .menu .menuList .menuInner {
     font-size: 14px;
@@ -411,8 +409,8 @@
     font-weight: 300;
   }
   .nav .menu .menuList .menuInner:hover {
-    border-bottom: 3px solid #7b6c63;
-    padding-bottom: 4px;
+    border-bottom: 5px solid #7b6c63;
+    padding-bottom: 10px;
   }
 
   /* visual */
@@ -425,34 +423,40 @@
     background-repeat: no-repeat;
   }
   .visual .visualInner {
-    height: 450px;
+    height: 675px;
   }
   .visual .visualInner .visualText {
-    padding-top: 100px;
+    padding-top: 190px;
     color: #FFF;
   }
+  .visual .visualInner .visualText .visualSubTitle {
+    font-size: 17px;
+  }
   .visual .visualInner .visualText .visualTitle {
-    margin: 5px 0 30px 0;
-    font-size: 40px;
+    margin: 30px 0 70px 0;
+  }
+  .visual .visualInner .visualText .visualTitle .visualTitleFont {
+    margin-bottom: 30px;
+    font-size: 47px;
     font-weight: 400;
-    line-height: 1.2em;
     letter-spacing: 0.08em;
   }
-  .visual .visualInner .visualText .visualTitle .visualTitleColor {
+  .visual .visualInner .visualText .visualTitle .visualTitleFont .visualTitleColor {
     color: #7b6c63;
   }
   .visual .visualInner .visualText .visualContact {
     display: block;
-    width: 200px;
-    padding: 15px 0px;
+    width: 265px;
+    padding: 24px 0px;
+    font-size: 12px;
     text-align: center;
-    background-color: rgba(200, 200, 200, 0.2);
+    background-color: rgba(68, 57, 45, 0.2);
   }
   .visual .visualInner .visualText .visualContact .visualContactText {
     color: #FFF;
   }
   .visual .visualInner .visualText .visualContact:hover {
-    background-color: rgba(200, 200, 200, 0.4);
+    background-color: rgba(68, 57, 45, 0.6);
   }
 
   /* content */
