--- a/style.scss
+++ b/style.scss
@@ -1,15 +1,13 @@
 /*======= common ========*/
-#body {
-  position: relative;
+.body {
   font-size: 16px;
-  color: #000;
-  line-height:1.2em;
+  line-height: 1;
 }
 
 #header {
-  background-color: #000;
+  background-color: #303030;
   .headerInner {
-    height: 50px;
+    height: 95px;
     position: relative;
   }
 }
@@ -21,7 +19,7 @@
 }
 
 #footer {
-  background-color: #000;
+  background-color: #1c1c1c;
   .footerInner {
     height: 30px;
     padding-top: 10px;
