--- a/_pc.scss
+++ b/_pc.scss
@@ -106,24 +106,24 @@
   width: 100%;
   height: auto;
   .aboutInner {
-    width: 400px;
-    margin: 0 auto 30px auto;
+    width: 430px;
+    margin: 0 auto 90px auto;
     text-align: center;
     .aboutTitle {
-      padding-bottom: 20px;
-      font-size: 30px;
+      padding-bottom: 50px;
+      font-size: 29px;
       color: #7b6c63;
-      font-weight: 400;
-      letter-spacing: 0.09em;
+      font-weight: 500;
+      letter-spacing: 0.2em;
     }
     .aboutTitleUnderLine {
       display: block;
-      width: 60px;
-      height: 1px;
+      width: 75px;
+      height: 0;
       margin: 0 auto;
-      padding-bottom: 20px;
+      padding-bottom: 45px;
       border: 0;
-      border-top: 3px solid #7b6c63;
+      border-top: 6px solid #7b6c63;
     }
     .aboutText {
       color: #000;
@@ -140,18 +140,19 @@
     display: table-cell;
     vertical-align: top;
     text-align: center;
-    padding-left: 20px;
+    padding-left: 30px;
     .businessInnerImg {
       width: 30px;
       height: 30px;
     }
     .businessInnerTitle {
-      padding: 10px 0;
-      font-weight: 300;
-      letter-spacing: 0.08em;
+      padding: 25px 0;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: 0.2em;
     }
     .businessInnerText {
-      font-size: 13px;
+      font-size: 12px;
       color: #949494;
       line-height: 1.6em;
     }
@@ -166,6 +167,7 @@
   text-align: center;
   .smallFont {
     font-size: 12px;
+    letter-spacing: 0.15em;
     color: #4d4d4d;
   }
 }
