--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@
 }
 
 #content .contentInner {
-  padding: 50px 0;
+  padding: 90px 0 100px 0;
 }
 
 #footer {
   background-color: #1c1c1c;
 }
 #footer .footerInner {
-  height: 30px;
-  padding-top: 10px;
+  height: 40px;
+  padding-top: 30px;
 }
 
 /*============ Device ==========*/
@@ -465,25 +465,25 @@
     height: auto;
   }
   .about .aboutInner {
-    width: 400px;
-    margin: 0 auto 30px auto;
+    width: 430px;
+    margin: 0 auto 90px auto;
     text-align: center;
   }
   .about .aboutInner .aboutTitle {
-    padding-bottom: 20px;
-    font-size: 30px;
+    padding-bottom: 50px;
+    font-size: 29px;
     color: #7b6c63;
-    font-weight: 400;
-    letter-spacing: 0.09em;
+    font-weight: 500;
+    letter-spacing: 0.2em;
   }
   .about .aboutInner .aboutTitleUnderLine {
     display: block;
-    width: 60px;
-    height: 1px;
+    width: 75px;
+    height: 0;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 45px;
     border: 0;
-    border-top: 3px solid #7b6c63;
+    border-top: 6px solid #7b6c63;
   }
   .about .aboutInner .aboutText {
     color: #000;
@@ -499,19 +499,20 @@
     display: table-cell;
     vertical-align: top;
     text-align: center;
-    padding-left: 20px;
+    padding-left: 30px;
   }
   .business .businessInner .businessInnerImg {
     width: 30px;
     height: 30px;
   }
   .business .businessInner .businessInnerTitle {
-    padding: 10px 0;
-    font-weight: 300;
-    letter-spacing: 0.08em;
+    padding: 25px 0;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.2em;
   }
   .business .businessInner .businessInnerText {
-    font-size: 13px;
+    font-size: 12px;
     color: #949494;
     line-height: 1.6em;
   }
@@ -525,6 +526,7 @@
   }
   .copyright .smallFont {
     font-size: 12px;
+    letter-spacing: 0.15em;
     color: #4d4d4d;
   }
 }
