--- a/style.scss
+++ b/style.scss
@@ -14,15 +14,15 @@
 
 #content {
   .contentInner {
-    padding: 50px 0;
+    padding: 90px 0 100px 0;
   }
 }
 
 #footer {
   background-color: #1c1c1c;
   .footerInner {
-    height: 30px;
-    padding-top: 10px;
+    height: 40px;
+    padding-top: 30px;
   }
 }
 
